Fixed the overflow hidden blog problem by adding clearfix mixin

--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -11,8 +11,11 @@
 
 // Clearfix
 @mixin clearfix() {
-  content: "";
-  display: table;
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 // Clear after (not all clearfix need this also)
