--- a/sass/modules/_blog-index.scss
+++ b/sass/modules/_blog-index.scss
@@ -3,7 +3,7 @@
   border-bottom: 2px solid;
   padding-bottom: 2rem;
   clear: both;
-  overflow: hidden;
+  @include clearfix;
 }
 
 .post:last-of-type {
